--- a/src/themes/index1.html
+++ b/src/themes/index1.html
@@ -107,7 +107,7 @@
         </div>
         <div class="card-body" style=" overflow-y: auto;margin: 5px 30px 20px 10px;">
 
-            <table class="table" style="width: 3000px;">
+            <table class="table table-sm" style="width: 3000px;">
                 <thead class="thead-dark">
                   <tr>
                     <th scope="col">序号</th>
